--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>ejbtest</name>
 
+    <properties>
+        <deltaspike.version>1.1.1-SNAPSHOT</deltaspike.version>
+    </properties>
+
     <dependencies>
 
         <dependency>
@@ -46,10 +50,35 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.deltaspike.cdictrl</groupId>
+            <artifactId>deltaspike-cdictrl-api</artifactId>
+            <version>${deltaspike.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.cdictrl</groupId>
+            <artifactId>deltaspike-cdictrl-openejb</artifactId>
+            <version>${deltaspike.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-test-control-module-api</artifactId>
+            <version>${deltaspike.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-test-control-module-impl</artifactId>
+            <version>${deltaspike.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.openejb</groupId>
             <artifactId>openejb-core-hibernate</artifactId>
             <type>pom</type>
-            <version>4.7.0</version>
+            <version>4.7.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
